--- a/Blogpost_repoproject.ipynb
+++ b/Blogpost_repoproject.ipynb
@@ -10,10 +10,9 @@
    },
    "source": [
     "## Introduction\n",
-    "The goal of this project was to recreate the neural network and the results (partly) of the following paper: Estimating individual treatment effect: generalization bounds and algorithms (Uri Shalit et al.). The autors of this paper aim to predict the indiviudel treatment effect (ITE) from observational data. Therefore they propose a CFR (Counterfactual Regression) framework. In addition, the authors used a Tensorflow framework for the creating of their network. In this project we aim to reconstruct their network in pytorch.\n",
+    "The goal of this project was to recreate the neural network, and the results (partly) of the following paper: Estimating individual treatment effect: generalization bounds and algorithms (Uri Shalit et al.). [1] The authors of this paper aim to predict the individual treatment effect (ITE) from observational data. Therefore, the authors proposed a CFR (Counterfactual Regression) framework. In addition, the authors used a Tensorflow framework for the creating of their network. In this project we aim to reconstruct their network in pytorch.\n",
     "\n",
-    "It should be noted that the authors of the original paper designed the code in such way that a lot of options are adjustable. For example different types of loss functions, regularisation methods, number of layers etc. In this project we choose to not experiment with all these different settings and mostly use the settings as defined in code (default settings). The only settings we changed where the choice of splitting the dataset (see section: CFR network) and the choice of the imbalance measure (see section: Correction for distribution difference)\n",
-    "{cite:p}`perez2011python`"
+    "It should be noted that the authors of the original paper designed the code in such way that a lot of options are adjustable. For example different types of loss functions, regularisation methods, number of layers etc. In this project we choose to not experiment with all these different settings and mostly use the settings as defined in code (default settings). The only settings we changed where the choice of splitting the dataset (see section: CFR network) and the choice of the imbalance measure (see section: Correction for distribution difference)."
    ]
   },
   {
@@ -25,7 +24,7 @@
    },
    "source": [
     "## Individual treatment effect\n",
-    "The invidual treatment effect (ITE) can be seen as the effect of a certain treatment for a specific patient. One can imagine that it is very usefull to estimate the outcome of a given treatment before the patient receive the treatment.A doctor could then choose the treatment based on the estimated outcome. Observational data e.g. given medication is used order to make such predictions. The ITE can be calculated using the following formula:\n",
+    "The individual treatment effect (ITE) can be seen as the effect of a certain treatment for a specific patient. One can imagine that it is very useful to estimate the outcome of a given treatment before the patient receive the treatment.A doctor could then choose the treatment based on the estimated outcome. Observational data e.g. given medication is used order to make such predictions. The ITE can be calculated using the following formula:\n",
     "\n",
     "$ITE (x) = E[Y_1 - Y_0 | x]$\n",
     "\n",
@@ -41,12 +40,12 @@
    },
    "source": [
     "## IHDP dataset\n",
-    "This project makes use of the IHDP (Infant Health and Development Program) dataset, in this dataset consist of data from early born baby's and their mother. It includes data of 747 patients from whom 25 covariantes (x) where measured for a total of 100 treatments.\n",
+    "This project makes use of the IHDP (Infant Health and Development Program) dataset, in this dataset consist of data from early born baby's and their mother. It includes data of 747 patients from whom 25 covariates (x) where measured for a total of 100 treatments. [2],[1]\n",
     "\n",
-    "![Table](table_data.png)\n",
+    "![Table 1](table_data.png)\n",
     "\n",
-    "This table shows the structure of the dataset.\n",
-    "The value t {1,0} indicates whether a patient is treated (1) or not (0), the y_factual is the outcome and the yc_factual is the outcome if one would have give the opposite treatment. This for example: if a diabetic patient received an insuline in treatment the t value would be 1 for the insuline treatment and the y_factual would be the \"factual\" outcome, the yc_factual outcome would then be the outcome given the opposite treatment, so when no insuline was given."
+    "This table shows the structure of the dataset. Adapted from [3].\n",
+    "The value t {1,0} indicates whether a patient is treated (1) or not (0), the y_factual is the outcome and the yc_factual is the outcome if one would have give the opposite treatment. This for example: if a diabetic patient received an insuline in treatment the t value would be 1 for the insulin treatment and the y_factual would be the \"factual\" outcome, the yc_factual outcome would then be the outcome given the opposite treatment, so when no insulin was given."
    ]
   },
   {
@@ -58,16 +57,16 @@
    },
    "source": [
     "## CFR-net\n",
-    "For the recreating of the CFR network we firstly stepwise unrevaled the Tensorflow code made by the authors. For this purpose we created a flowchart to gain insight in the proposed network:\n",
+    "For the recreating of the CFR network we firstly stepwise unraveled the Tensorflow code made by the authors. For this purpose we created a flowchart to gain insight in the proposed network:\n",
     "\n",
-    "![Flowchart](flow_chart.png)\n",
+    "![Flowchart](Flowdiagram.png)\n",
     "\n",
-    "It can be seen that the network consist of 6 layers, the ReLU a non-linear activation, uses multiple dropout layers and at half-way it concatenates with the t-values. Then it user can choose for splitting the data set in two subsets: a subset with all data where t = 1 (treated group) and a subset for all data with t = 0 (not treated). If the user choose to do so then the datasets will be merged again to form 1 output."
+    "It can be seen that the network consist of N layers (this is adjustable, but we choose for the default setting of 2 representation and 2 regression layers), the ReLU a non-linear activation, uses multiple dropout layers and at half-way it concatenates with the t-values. Then the user can choose for splitting the data set in two subsets: a subset with all data where t = 1 (treated group), and a subset for all data with t = 0 (not treated). If the user choose to do so then the datasets will be merged again to form 1 output."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 40,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -154,7 +153,7 @@
    "metadata": {},
    "source": [
     "## Training loop\n",
-    "The training loop of the CFR network makes use of a ADAM optimizer and a MSE-loss criterion. In addition to the loss function there was also corrected for the distribution difference these corrections were added to the loss function. How this was done will be further described in the next section. Further we did not use any regularisation parameters, however the code posted by the authors gives different options for regularisation, but in the default settings it is not used.\n"
+    "The training loop of the CFR network makes use of a ADAM optimizer and a MSE-loss criterion. In addition to the loss function there was also corrected for the distribution difference these corrections were added to the loss function. How this was done will be further described in the next section. Further we did not use any regularisation parameters, however the code posted by the authors gives different options for regularisation, but in the default settings it is not used."
    ]
   },
   {
@@ -166,8 +165,8 @@
    },
    "source": [
     "## Corrections for distribution difference\n",
-    "### Sample reweighting\n",
-    "To compensate for the difference in group size (treated / non treated) a sample re-weighting was introduced. All the samples were re-weighted with the following formula:\n",
+    "### Sample re-weighting\n",
+    "To compensate for the difference in group size (treated / non-treated) a sample re-weighting was introduced. All the samples were re-weighted with the following formula [1]:\n",
     "\n",
     "$wi = \\frac{ti}{2u} + \\frac{1-ti}{2(1-u)}$ for $i = 1 ... n $\n",
     "\n",
@@ -176,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 41,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -205,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 42,
    "outputs": [],
    "source": [
     "# Squared linear MMD\n",
@@ -235,7 +234,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "The actual computations of these imbalance errors goes a bit beyond the scope of this blog post. However, it is good to know that there was corected for the distribution imbalance in two differnt ways. This will also result in two different outcomes."
+    "The actual computations of these imbalance errors goes a bit beyond the scope of this blog post. However, it is good to know that there was corrected for the distribution imbalance in two different ways. This will also result in two different outcomes."
    ],
    "metadata": {
     "collapsed": false,
@@ -254,7 +253,7 @@
    "source": [
     "## Outcome measures\n",
     "### PEHE\n",
-    "One of the main outcome measures of the project is the expected precision in Estimation of Heterogeneous Effect (PEHE). Which can be calculated using the following formula:\n",
+    "One of the main outcome measures of the project is the expected precision in Estimation of Heterogeneous Effect (PEHE). Which can be calculated using the following formula [1]:\n",
     "\n",
     "$ \\in PEHE = \\int_x (\\hat{\\tau_f}(x)-\\tau_f(x))^2 p(x) dx $\n",
     "\n",
@@ -269,14 +268,14 @@
    "cell_type": "markdown",
    "source": [
     "### ATE\n",
-    "The second main outcome is the absolute error of the average treatment effect (ATE). Following the paper this can be calculated using the following formula:\n",
+    "The second main outcome is the absolute error of the average treatment effect (ATE). Following the paper this can be calculated using the following formula [1]:\n",
     "$\\in ATE = |\\frac{1}{n}\\sum\\limits_{i=1}^{n} (f(x_i,1)-f(x_i,0)) - \\frac{1}{n}\\sum\\limits_{i=1}^{n} (m_1(xi) - m_0(xi))|$\n",
     "\n",
     "Rewriting knowing that $m_1(xi) - m_0(xi)$ is another description for the ITE gives:\n",
     "\n",
     "$\\in ATE = |\\frac{1}{n}\\sum\\limits_{i=1}^{n} \\hat{\\tau}_i - \\frac{1}{n}\\sum\\limits_{i=1}^{n} \\tau_i|$\n",
     "\n",
-    "The following code is just a short represenation of the lines used for calculating the PEHE and the ATE."
+    "The following code is just a short representation of the lines used for calculating the PEHE and the ATE."
    ],
    "metadata": {
     "collapsed": false,
@@ -287,29 +286,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'mu1' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mNameError\u001B[0m                                 Traceback (most recent call last)",
-      "\u001B[1;32m<ipython-input-31-e4d316ed0723>\u001B[0m in \u001B[0;36m<module>\u001B[1;34m\u001B[0m\n\u001B[0;32m      1\u001B[0m \u001B[1;31m# Calculation of PEHE\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m----> 2\u001B[1;33m \u001B[0meff\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mmu1\u001B[0m\u001B[1;33m-\u001B[0m\u001B[0mmu0\u001B[0m \u001B[1;31m# ITE\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m      3\u001B[0m \u001B[0meff_pred\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mycf_p\u001B[0m \u001B[1;33m-\u001B[0m \u001B[0myf_p\u001B[0m\u001B[1;33m;\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m      4\u001B[0m \u001B[0mpehe\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mnp\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0msqrt\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mnp\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mmean\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mnp\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0msquare\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0meff_pred\u001B[0m\u001B[1;33m-\u001B[0m\u001B[0meff\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m      5\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n",
-      "\u001B[1;31mNameError\u001B[0m: name 'mu1' is not defined"
-     ]
-    }
-   ],
+   "execution_count": 43,
+   "outputs": [],
    "source": [
-    "# Calculation of PEHE\n",
-    "eff = mu1-mu0 # ITE\n",
-    "eff_pred = ycf_p - yf_p;\n",
-    "pehe = np.sqrt(np.mean(np.square(eff_pred-eff)))\n",
+    "import numpy as np\n",
     "\n",
-    "# Calulation of ATE\n",
-    "ate_pred = np.mean(eff_pred)\n",
-    "bias_ate = ate_pred-np.mean(eff)"
+    "def pehe_ate(mu1, mu0, ycf_p,yf_p):\n",
+    "    # Calculation of PEHE\n",
+    "    eff = mu1-mu0 # ITE\n",
+    "    eff_pred = ycf_p - yf_p\n",
+    "    pehe = np.sqrt(np.mean(np.square(eff_pred-eff)))\n",
+    "\n",
+    "    # Calulation of ATE\n",
+    "    ate_pred = np.mean(eff_pred)\n",
+    "    bias_ate = ate_pred-np.mean(eff)\n",
+    "\n",
+    "    return pehe, bias_ate\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -326,17 +318,43 @@
     }
    },
    "source": [
-    "## Results\n"
+    "## Results\n",
+    "After training our network we calculated the outcome measures (PEHE and ATE) for two different imbalance functions. By doing this we recreated the results of the orginal paper. The results are summarized in the following table:\n",
+    "\n",
+    "\n",
+    "<div>\n",
+    "<img src=\"results_table.png\" width=\"500\"/>\n",
+    "</div>\n",
+    "\n",
+    "In addition to the outcome measures we also kept track of the losses during each iteration. These results can be summarized in a graph plotting the loss during training and the corresponding validation loss for every 100 iterations. We computed graphs for both the imbalance error functions.\n",
+    "\n",
+    "<div>\n",
+    "<img src=\"output_graph_wass.png\" width=\"500\"/>\n",
+    "</div>\n",
+    "<div>\n",
+    "<img src=\"output_graph_mmd.png\" width=\"500\"/>\n",
+    "</div>\n"
    ]
   },
   {
    "cell_type": "markdown",
    "source": [
     "## Conclusion\n",
-    "--> MMD vs WSS\n",
-    "--> paper compares also different measuring systems\n",
-    "--> difference between t and 0\n",
-    "--> we don't know which settings the paper used to obtain their results"
+    "Firstly, our presented results are in line with the results of the original paper. Keeping in mind that we were not aware of all the settings the authors used for the construction of these results. Secondly, about the imbalance error, it is hard to say which imbalance error function performs the best because the results fluctuate very much."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Recommendations\n",
+    "The main reason of the difference in results between our reproduction and the original paper is probably because we didn't know the network settings used for the creation of the results. These settings are for example: learning rate, dropout probability, number of linear layers, regularisation etc. It would have been favorable to investigate in all the different options and selecting the best settings for the network. \n",
+    "In addition, we were not able to split the data set in the network. It could be possible that splitting the dataset has an impact (positive or negative) on the results)."
    ],
    "metadata": {
     "collapsed": false,
@@ -349,11 +367,11 @@
    "cell_type": "markdown",
    "source": [
     "## References\n",
-    "bibtex_bibfiles:\n",
-    "    - export(1).bib\n",
-    "```{bibliography}\n",
-    ":style: unsrt\n",
-    "```"
+    "[1] Shalit, U. (2017). Estimating individual treatment effect: generalization bounds and algorithms.\n",
+    "\n",
+    "[2] Information about the IHDP dataset can be found on: https://www.icpsr.umich.edu/web/HMCA/studies/9795\n",
+    "\n",
+    "[3] Amit Sharma, Emre Kiciman, 2020, accessed on 23-03-2021, https://microsoft.github.io/dowhy/example_notebooks/dowhy_ihdp_data_example.html"
    ],
    "metadata": {
     "collapsed": false,
