Blog_post updated

--- a/Blogpost_repoproject.ipynb
+++ b/Blogpost_repoproject.ipynb
@@ -12,7 +12,7 @@
     "## Introduction\n",
     "The goal of this project was to recreate the neural network, and the results (partly) of the following paper: Estimating individual treatment effect: generalization bounds and algorithms (Uri Shalit et al.). [1] The authors of this paper aim to predict the individual treatment effect (ITE) from observational data. Therefore, the authors proposed a CFR (Counterfactual Regression) framework. In addition, the authors used a Tensorflow framework for the creating of their network. In this project we aim to reconstruct their network in pytorch.\n",
     "\n",
-    "It should be noted that the authors of the original paper designed the code in such way that a lot of options are adjustable. For example different types of loss functions, regularisation methods, number of layers etc. In this project we choose to not experiment with all these different settings and mostly use the settings as defined in code (default settings). The only settings we changed where the choice of splitting the dataset (see section: CFR network) and the choice of the imbalance measure (see section: Correction for distribution difference)."
+    "It should be noted that the authors of the original paper designed the code in such way that a lot of options are adjustable. For example different types of loss functions, regularisation methods, number of layers etc. In this project we choose to not experiment with all these different settings and mostly use the settings as defined in code (default settings). The only setting from the default configuration that we changed was the choice of the imbalance measure (see section: Correction for distribution difference)."
    ]
   },
   {
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 1,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 2,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -204,10 +204,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 3,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
-    "# Squared linear MMD\n",
+    "# Squared linear MMD imbalance error\n",
     "def mmd2_lin(X,t,p):\n",
     "    ''' Linear MMD '''\n",
     "\n",
@@ -222,26 +227,73 @@
     "\n",
     "    mmd = torch.sum(torch.square(2.0*p*mean_treated - 2.0*(1.0-p)*mean_control))\n",
     "\n",
-    "    return mmd"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+    "    return mmd\n",
+    "\n",
+    "# Wasserstein imbalance error\n",
+    "def wasserstein(X,t,p,lam=10,its=10,sq=False,backpropT=False):\n",
+    "    \"\"\" Returns the Wasserstein distance between treatment groups \"\"\"\n",
+    "\n",
+    "    it = torch.where(t > 0)[0]  # getting the positions\n",
+    "    ic = torch.where(t < 1)[0]\n",
+    "\n",
+    "    Xt = torch.index_select(X, 0, it)  # Getting the nx100 for each value\n",
+    "    Xc = torch.index_select(X, 0, ic)\n",
+    "\n",
+    "    nc = Xc.shape[0]\n",
+    "    nt = Xt.shape[0]\n",
+    "\n",
+    "    ''' Compute distance matrix'''\n",
+    "    if sq:\n",
+    "        M = pdist2sq(Xt,Xc)\n",
+    "    else:\n",
+    "        M = safe_sqrt(pdist2sq(Xt,Xc))\n",
+    "\n",
+    "    ''' Estimate lambda and delta '''\n",
+    "    M_mean = torch.mean(M)\n",
+    "    M_drop = torch.nn.Dropout(10/(nc*nt))(M)\n",
+    "    delta = torch.max(M)\n",
+    "    eff_lam = lam/M_mean\n",
+    "\n",
+    "    ''' Compute new distance matrix '''\n",
+    "    Mt = M\n",
+    "    row = delta*torch.ones(M.shape[1])\n",
+    "    col = torch.cat((delta*torch.ones(M.shape[0]),torch.zeros((1))),0)\n",
+    "    Mt = torch.cat((M, torch.unsqueeze(row, 0)), 0)\n",
+    "    Mt = torch.cat((Mt, torch.unsqueeze(col, 1)), 1)\n",
+    "\n",
+    "    ''' Compute marginal vectors '''\n",
+    "    a = torch.cat((p * torch.ones((torch.where(t > 0)[0].shape[0],1)) / nt, (1 - p) * torch.ones((1,1))), 0)\n",
+    "    b = torch.cat(((1-p) * torch.ones((torch.where(t < 1)[0].shape[0],1)) / nc, p * torch.ones((1,1))), 0)\n",
+    "\n",
+    "    ''' Compute kernel matrix'''\n",
+    "    Mlam = eff_lam*Mt\n",
+    "    K = torch.exp(-Mlam) + 1e-6 # added constant to avoid nan\n",
+    "    U = K*Mt\n",
+    "    ainvK = K/a\n",
+    "\n",
+    "    u = a\n",
+    "    for i in range(0,its):\n",
+    "        u = 1.0/(torch.matmul(ainvK,( b / torch.transpose(torch.matmul(torch.transpose(u,0,1),K),0,1))))\n",
+    "    v = b/(torch.transpose(torch.matmul(torch.transpose(u,0,1),K),0,1))\n",
+    "\n",
+    "    T = u*(torch.transpose(v,0,1)*K)\n",
+    "\n",
+    "    E = T*Mt\n",
+    "    D = 2*torch.sum(E)\n",
+    "\n",
+    "    return D, Mlam"
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "The actual computations of these imbalance errors goes a bit beyond the scope of this blog post. However, it is good to know that there was corrected for the distribution imbalance in two different ways. This will also result in two different outcomes."
-   ],
    "metadata": {
-    "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
-   }
+   },
+   "source": [
+    "The actual computations of these imbalance errors goes a bit beyond the scope of this blog post. However, it is good to know that there was corrected for the distribution imbalance in two different ways. This will also result in two different outcomes."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -253,9 +305,9 @@
    "source": [
     "## Outcome measures\n",
     "### PEHE\n",
-    "One of the main outcome measures of the project is the expected precision in Estimation of Heterogeneous Effect (PEHE). Which can be calculated using the following formula [1]:\n",
+    "One of the main outcome measures of the project is the expected precision in Estimation of Heterogeneous Effect (PEHE). Which can be calculated using the following formula:\n",
     "\n",
-    "$ \\in PEHE = \\int_x (\\hat{\\tau_f}(x)-\\tau_f(x))^2 p(x) dx $\n",
+    "$ \\epsilon PEHE = \\int_x (\\hat{\\tau_f}(x)-\\tau_f(x))^2 p(x) dx $\n",
     "\n",
     "With:\n",
     "\n",
@@ -266,27 +318,32 @@
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "### ATE\n",
-    "The second main outcome is the absolute error of the average treatment effect (ATE). Following the paper this can be calculated using the following formula [1]:\n",
-    "$\\in ATE = |\\frac{1}{n}\\sum\\limits_{i=1}^{n} (f(x_i,1)-f(x_i,0)) - \\frac{1}{n}\\sum\\limits_{i=1}^{n} (m_1(xi) - m_0(xi))|$\n",
-    "\n",
-    "Rewriting knowing that $m_1(xi) - m_0(xi)$ is another description for the ITE gives:\n",
-    "\n",
-    "$\\in ATE = |\\frac{1}{n}\\sum\\limits_{i=1}^{n} \\hat{\\tau}_i - \\frac{1}{n}\\sum\\limits_{i=1}^{n} \\tau_i|$\n",
-    "\n",
-    "The following code is just a short representation of the lines used for calculating the PEHE and the ATE."
-   ],
    "metadata": {
-    "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
-   }
+   },
+   "source": [
+    "### ATE\n",
+    "The second main outcome is the absolute error of the average treatment effect (ATE). Following the paper this can be calculated using the following formula:\n",
+    "\n",
+    "$\\epsilon ATE = |\\frac{1}{n}\\sum\\limits_{i=1}^{n} (f(x_i,1)-f(x_i,0)) - \\frac{1}{n}\\sum\\limits_{i=1}^{n} (m_1(xi) - m_0(xi))|$\n",
+    "\n",
+    "Rewriting knowing that $m_1(xi) - m_0(xi)$ is another description for the ITE gives:\n",
+    "\n",
+    "$\\epsilon ATE = |\\frac{1}{n}\\sum\\limits_{i=1}^{n} \\hat{\\tau}_i - \\frac{1}{n}\\sum\\limits_{i=1}^{n} \\tau_i|$\n",
+    "\n",
+    "The following code is just a short representation of the lines used for calculating the PEHE and the ATE."
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 4,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -302,13 +359,7 @@
     "    bias_ate = ate_pred-np.mean(eff)\n",
     "\n",
     "    return pehe, bias_ate\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
@@ -321,8 +372,8 @@
     "## Results\n",
     "After training our network we calculated the outcome measures (PEHE and ATE) for two different imbalance functions. By doing this we recreated the results of the orginal paper. The results are summarized in the following table:\n",
     "\n",
-    "\n",
     "<div>\n",
+    "    \n",
     "<img src=\"results_table.png\" width=\"500\"/>\n",
     "</div>\n",
     "\n",
@@ -338,33 +389,87 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## Conclusion\n",
-    "Firstly, our presented results are in line with the results of the original paper. Keeping in mind that we were not aware of all the settings the authors used for the construction of these results. Secondly, about the imbalance error, it is hard to say which imbalance error function performs the best because the results fluctuate very much."
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   }
+    "Our presented results are in line with the results of the original paper. Keeping in mind that we were not aware of all the exact settings the authors used for the construction of their results. Additionally, about the imbalance error, it is hard to say which function performs the best because the results fluctuate very much. In the repository of our code the file ''main_cfrnet.py'' can be run to replicate our results.\n",
+    "\n",
+    "We tried to reproduce the network based on the paper, however this had many complications given the amount of 'mathiness' and unclear explanation of the CFR network. To be able to reproduce the network we needed to carefully analyse the published code. This code had many complications with its outdated TensorFlow libraries and its vast amount parameters."
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## Recommendations\n",
-    "The main reason of the difference in results between our reproduction and the original paper is probably because we didn't know the network settings used for the creation of the results. These settings are for example: learning rate, dropout probability, number of linear layers, regularisation etc. It would have been favorable to investigate in all the different options and selecting the best settings for the network. \n",
-    "In addition, we were not able to split the data set in the network. It could be possible that splitting the dataset has an impact (positive or negative) on the results)."
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   }
+    "The main reason of the difference in results between our reproduction and the original paper is probably because we did not know the network settings used for the creation of the results. These settings are for example: learning rate, dropout probability, regularisation etc. It would have been favorable to investigate in all the different options and selecting the best settings for the network. \n",
+    "In addition, we were not able to split the data set in the network. It could be possible that splitting the dataset has an impact (positive or negative) on the results.\n",
+    "To try to test many other architectures of the CFR network, a variant of the project, in which the number of layers can be dynamically allocated, was implemented in the branch named Dynamic_network of our repository. This implementation (shown below) had no remarkable (it even went worse) effects in some of the tests performed when changing these values."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "\n",
+    "class FCNet(nn.Module):\n",
+    "    \"\"\"\n",
+    "    Simple fully connected neural network with residual connections in PyTorch.\n",
+    "    Layers are defined in __init__ and forward pass implemented in forward.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    def __init__(self, dim_in, n_in, dim_out, n_out, dropout_in, dropout_out):\n",
+    "        super(FCNet, self).__init__()\n",
+    "\n",
+    "        self.in_layers=[]\n",
+    "        self.in_drop_layers = []\n",
+    "        self.out_layers = []\n",
+    "        self.out_drop_layers = []\n",
+    "\n",
+    "        # Input layer\n",
+    "        self.h_in = nn.Linear(25, dim_in)\n",
+    "        self.do1 = torch.nn.Dropout(p=dropout_in)\n",
+    "        \n",
+    "        # Input group of layers\n",
+    "        for i in range(n_in):\n",
+    "            self.in_layers.append(nn.Linear(dim_in, dim_in))\n",
+    "            self.in_drop_layers.append(torch.nn.Dropout(p=dropout_in))\n",
+    "\n",
+    "        # Add representation\n",
+    "        if not split_output:\n",
+    "            self.out_layers.append(nn.Linear(dim_out+1, dim_out))\n",
+    "        else:\n",
+    "            self.out_layers.append(nn.Linear(dim_out, dim_out))\n",
+    "        self.out_drop_layers.append(torch.nn.Dropout(p=dropout_out))\n",
+    "\n",
+    "         # Output group of layers\n",
+    "        for i in range(n_out):\n",
+    "            self.out_layers.append(nn.Linear(dim_out, dim_out))\n",
+    "            self.out_drop_layers.append(torch.nn.Dropout(p=dropout_out))\n",
+    "\n",
+    "        # Linear classifier layer\n",
+    "        self.h_out = nn.Linear(dim_out, 1)"
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## References\n",
     "[1] Shalit, U. (2017). Estimating individual treatment effect: generalization bounds and algorithms.\n",
@@ -372,13 +477,7 @@
     "[2] Information about the IHDP dataset can be found on: https://www.icpsr.umich.edu/web/HMCA/studies/9795\n",
     "\n",
     "[3] Amit Sharma, Emre Kiciman, 2020, accessed on 23-03-2021, https://microsoft.github.io/dowhy/example_notebooks/dowhy_ihdp_data_example.html"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   }
+   ]
   }
  ],
  "metadata": {
@@ -397,7 +496,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
