--- a/Blogpost_repoproject.ipynb
+++ b/Blogpost_repoproject.ipynb
@@ -2,6 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Reproduction project: Estimating individual treatment effect\n",
+    "Julia Wilbers (4470249) J.E.Wilbers@student.tudelft.nl\n",
+    "Juan Molano (5239540) J.E.MolanoValencia@student.tudelft.nl"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true,
     "pycharm": {
