--- a/Blogpost_repoproject.ipynb
+++ b/Blogpost_repoproject.ipynb
@@ -51,7 +51,7 @@
     "## IHDP dataset\n",
     "This project makes use of the IHDP (Infant Health and Development Program) dataset, in this dataset consist of data from early born baby's and their mother. It includes data of 747 patients from whom 25 covariates (x) where measured for a total of 100 treatments. [2],[1]\n",
     "\n",
-    "![Table 1](table_data.png)\n",
+    "![Table 1](images/table_data.png)\n",
     "\n",
     "This table shows the structure of the dataset. Adapted from [3].\n",
     "The value t {1,0} indicates whether a patient is treated (1) or not (0), the y_factual is the outcome and the yc_factual is the outcome if one would have give the opposite treatment. This for example: if a diabetic patient received an insuline in treatment the t value would be 1 for the insulin treatment and the y_factual would be the \"factual\" outcome, the yc_factual outcome would then be the outcome given the opposite treatment, so when no insulin was given."
@@ -68,7 +68,7 @@
     "## CFR-net\n",
     "For the recreating of the CFR network we firstly stepwise unraveled the Tensorflow code made by the authors. For this purpose we created a flowchart to gain insight in the proposed network:\n",
     "\n",
-    "![Flowchart](Flowdiagram.png)\n",
+    "![Flowchart](images/Flowdiagram.png)\n",
     "\n",
     "It can be seen that the network consist of N layers (this is adjustable, but we choose for the default setting of 2 representation and 2 regression layers), the ReLU a non-linear activation, uses multiple dropout layers and at half-way it concatenates with the t-values. Then the user can choose for splitting the data set in two subsets: a subset with all data where t = 1 (treated group), and a subset for all data with t = 0 (not treated). If the user choose to do so then the datasets will be merged again to form 1 output."
    ]
@@ -383,16 +383,16 @@
     "\n",
     "<div>\n",
     "    \n",
-    "<img src=\"results_table.png\" width=\"500\"/>\n",
+    "<img src=\"images/results_table.png\" width=\"500\"/>\n",
     "</div>\n",
     "\n",
     "In addition to the outcome measures we also kept track of the losses during each iteration. These results can be summarized in a graph plotting the loss during training and the corresponding validation loss for every 100 iterations. We computed graphs for both the imbalance error functions.\n",
     "\n",
     "<div>\n",
-    "<img src=\"output_graph_wass.png\" width=\"500\"/>\n",
+    "<img src=\"images/output_graph_wass.png\" width=\"500\"/>\n",
     "</div>\n",
     "<div>\n",
-    "<img src=\"output_graph_mmd.png\" width=\"500\"/>\n",
+    "<img src=\"images/output_graph_mmd.png\" width=\"500\"/>\n",
     "</div>\n"
    ]
   },
